--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-langchain
-langchain-anthropic
-langchain-community
+langchain>=0.2.0
+langchain-community>=0.2.0
+langchain-anthropic>=0.1.15
+langchain-core>=0.2.0
 faiss-cpu
 pypdf
 streamlit
