--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-langchain>=0.2.0
-langchain-community>=0.2.0
+langchain>=0.2.0,<0.4.0
+langchain-community>=0.2.0,<0.4.0
 langchain-anthropic>=0.1.15
-langchain-core>=0.2.0
+langchain-core>=0.2.0,<0.4.0
 faiss-cpu
 pypdf
 streamlit
